add css reference

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-index.html
+<!DOCTYPE html>
+<html>
+    <head>
+    <title>Animal crossing survey</title>
+    <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
 <h1 id="title">Animal Cossing Survey</h1>
     
     <p id="description"><i>Thank you for taking the time to help us improve the platform</i></p>
@@ -65,3 +71,5 @@ index.html
    
      <button type="submit">Submit</button>
    </form>
+</body>
+</html>
