--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       
       <div class="form-control"><label for="email" id="email-label">Email</label>
-        <input type="text" id="email" placeholder="Enter your email" required/>
+        <input type="email" id="email" placeholder="Enter your email" required/>
       </div>
       
       <div class="form-control"><label for="number" id="number-label">Age </label>
