--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 <form id="survey-form">
       <div class="form-control">
-        <label for="name" id="name-label">Name</label>
+        <label for="name" id="name-label"></label> <b>Name</b>></label>
         <input type="text" id="name" placeholder="Enter your name" required />
       </div>
       
