--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
           </div>
           
    
-     <button type="submit">Submit</button>
+      <div>
+        <button type="submit">Submit</button>
+        <form action="https://docs.google.com/document/d/1dot6wAoe-MeaI-b36slkfdB5VDlwYX6xHw6dUemFpOk/edit">
+      </div>
    </form>
 </body>
 </html>
