Submit alert.js

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
    
       <div>
         <button type="submit">Submit</button>
+        <script> src:"scripts/main.js" </script>
         <form action="https://docs.google.com/document/d/1dot6wAoe-MeaI-b36slkfdB5VDlwYX6xHw6dUemFpOk/edit">
-      </div>
+        </div>
    </form>
 </body>
 </html>
