--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     <title>Animal crossing survey</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="scripts/main.js" />
     </head>
     <body>
 <h1 id="title">Animal Cossing Survey</h1>
